gitops-meshappcolor/colorapp/istio-virtual-service/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
    - match:
      - uri:
          prefix: /productpage
      - uri:
          prefix: /api/v1/products
    - route:
        - destination:
            host: productpage
            subset: v1
          weight: 100
